fix #151 desciptions of venn sections visible when not interacted with

--- a/themes/gfsc/assets/sass/components/_venn.sass
+++ b/themes/gfsc/assets/sass/components/_venn.sass
@@ -103,6 +103,8 @@
       font-family: sans-serif
       text-transform: none
 
+  .hide
+    display: none
 
   .selected .hide,
   .hovered .hide,
